{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 353,
  "lineage": "ece99adf-c6fb-fcf5-1c8b-e5c273b87914",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "tier1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:subnet/subnet-097d28122a407ab4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 1017,
            "cidr_block": "172.168.12.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097d28122a407ab4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "945251900491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-public-ap-southeast-1a",
              "Terraform": "true",
              "Tier": "1",
              "subnet": "private"
            },
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:subnet/subnet-0947609cd757f4bb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 1018,
            "cidr_block": "172.168.16.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0947609cd757f4bb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "945251900491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-public-ap-southeast-1b",
              "Terraform": "true",
              "Tier": "1",
              "subnet": "private"
            },
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "tier2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:subnet/subnet-062ae3776d28c51e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 1019,
            "cidr_block": "172.168.0.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062ae3776d28c51e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945251900491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1a",
              "Terraform": "true",
              "Tier": "2",
              "subnet": "private"
            },
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:subnet/subnet-07ff5e6492b89a5f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 1019,
            "cidr_block": "172.168.4.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ff5e6492b89a5f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945251900491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc-private-ap-southeast-1b",
              "Terraform": "true",
              "Tier": "2",
              "subnet": "private"
            },
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:vpc/vpc-000ba1ce5953f5ee0",
            "cidr_block": "172.168.0.0/19",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07969d40c482cc05d",
                "cidr_block": "172.168.0.0/19",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-7878521f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "test-vpc"
                ]
              }
            ],
            "id": "vpc-000ba1ce5953f5ee0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08c69d9f7d790221b",
            "owner_id": "945251900491",
            "state": "available",
            "tags": {
              "Environment": "test",
              "Name": "test-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:loadbalancer/app/test-demo-app-v1/a177626a31001a2c",
            "arn_suffix": "app/test-demo-app-v1/a177626a31001a2c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-test-demo-app-v1-344370660.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:loadbalancer/app/test-demo-app-v1/a177626a31001a2c",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-demo-app-v1",
            "security_groups": [
              "sg-02c3e221d4bc35354"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-062ae3776d28c51e3"
              },
              {
                "subnet_id": "subnet-07ff5e6492b89a5f8"
              }
            ],
            "subnets": [
              "subnet-062ae3776d28c51e3",
              "subnet-07ff5e6492b89a5f8"
            ],
            "tags": {
              "Application": "demo",
              "Environment": "test",
              "Name": "test-demo-app-ALB-v1",
              "Role": "app"
            },
            "tags_all": {
              "Application": "demo",
              "Environment": "test",
              "Name": "test-demo-app-ALB-v1",
              "Role": "app"
            },
            "vpc_id": "vpc-000ba1ce5953f5ee0",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.apialb",
            "aws_security_group.webalb",
            "aws_security_group.websrv",
            "data.aws_subnet.tier2",
            "data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:loadbalancer/app/test-demo-web-v1/8b2bb49b672a30d2",
            "arn_suffix": "app/test-demo-web-v1/8b2bb49b672a30d2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-demo-web-v1-763788246.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:loadbalancer/app/test-demo-web-v1/8b2bb49b672a30d2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-demo-web-v1",
            "security_groups": [
              "sg-0c9456522fa747c08"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0947609cd757f4bb7"
              },
              {
                "subnet_id": "subnet-097d28122a407ab4f"
              }
            ],
            "subnets": [
              "subnet-0947609cd757f4bb7",
              "subnet-097d28122a407ab4f"
            ],
            "tags": {
              "Application": "demo",
              "Environment": "test",
              "Name": "test-demo-web-ALB-v1",
              "Role": "web"
            },
            "tags_all": {
              "Application": "demo",
              "Environment": "test",
              "Name": "test-demo-web-ALB-v1",
              "Role": "web"
            },
            "vpc_id": "vpc-000ba1ce5953f5ee0",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.webalb",
            "data.aws_subnet.tier1",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:listener/app/test-demo-app-v1/a177626a31001a2c/d30e0bb426d66571",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:targetgroup/test-demo-app-v1/493d4e87a83859e7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:listener/app/test-demo-app-v1/a177626a31001a2c/d30e0bb426d66571",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:loadbalancer/app/test-demo-app-v1/a177626a31001a2c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.api",
            "aws_alb_target_group.api_target_group",
            "aws_security_group.apialb",
            "aws_security_group.webalb",
            "aws_security_group.websrv",
            "data.aws_subnet.tier2",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "web_frontend_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:listener/app/test-demo-web-v1/8b2bb49b672a30d2/c3893b2347806dfa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:targetgroup/test-demo-web-v1/33aa164846c28555",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:listener/app/test-demo-web-v1/8b2bb49b672a30d2/c3893b2347806dfa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:loadbalancer/app/test-demo-web-v1/8b2bb49b672a30d2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.web",
            "aws_alb_target_group.web_target_group",
            "aws_security_group.webalb",
            "data.aws_subnet.tier1",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "api_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:targetgroup/test-demo-app-v1/493d4e87a83859e7",
            "arn_suffix": "targetgroup/test-demo-app-v1/493d4e87a83859e7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:targetgroup/test-demo-app-v1/493d4e87a83859e7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test-demo-app-v1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "demo",
              "Environment": "test",
              "Name": "test-demo-app-ALB-v1",
              "Role": "app"
            },
            "tags_all": {
              "Application": "demo",
              "Environment": "test",
              "Name": "test-demo-app-ALB-v1",
              "Role": "app"
            },
            "target_type": "instance",
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "web_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:targetgroup/test-demo-web-v1/33aa164846c28555",
            "arn_suffix": "targetgroup/test-demo-web-v1/33aa164846c28555",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:945251900491:targetgroup/test-demo-web-v1/33aa164846c28555",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test-demo-web-v1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "demo",
              "Environment": "test",
              "Name": "test-demo-web-ALB-v1",
              "Role": "web"
            },
            "tags_all": {
              "Application": "demo",
              "Environment": "test",
              "Name": "test-demo-web-ALB-v1",
              "Role": "web"
            },
            "target_type": "instance",
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:security-group/sg-02c3e221d4bc35354",
            "description": "test demo app  ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c3e221d4bc35354",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0669e40b1d79dc597"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-app-alb-v12022010914182599360000000b",
            "name_prefix": "test-app-alb-v1",
            "owner_id": "945251900491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "app",
              "Environment": "test",
              "Name": "demo-app-alb-v1",
              "Role": "app"
            },
            "tags_all": {
              "Application": "app",
              "Environment": "test",
              "Name": "demo-app-alb-v1",
              "Role": "app"
            },
            "timeouts": null,
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webalb",
            "aws_security_group.websrv",
            "data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apisrv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:security-group/sg-0af83f3b660abb02e",
            "description": "test demo  app-v1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af83f3b660abb02e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c3e221d4bc35354"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-demo-app-v12022010914182900060000000c",
            "name_prefix": "test-demo-app-v1",
            "owner_id": "945251900491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "demo",
              "Environment": "test",
              "Name": "test-demo-app-v1",
              "Role": "app"
            },
            "tags_all": {
              "Application": "demo",
              "Environment": "test",
              "Name": "test-demo-app-v1",
              "Role": "app"
            },
            "timeouts": null,
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.apialb",
            "aws_security_group.webalb",
            "aws_security_group.websrv",
            "data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:security-group/sg-0c9456522fa747c08",
            "description": "test demo web  ALB v1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9456522fa747c08",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.37.221.208/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-web-alb-v120220109141819354400000005",
            "name_prefix": "test-web-alb-v1",
            "owner_id": "945251900491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "web",
              "Environment": "test",
              "Name": "demo-web-alb-v1",
              "Role": "web"
            },
            "tags_all": {
              "Application": "web",
              "Environment": "test",
              "Name": "demo-web-alb-v1",
              "Role": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websrv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:945251900491:security-group/sg-0669e40b1d79dc597",
            "description": "test demo  web-v1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0669e40b1d79dc597",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f042a9b6f495049f"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c9456522fa747c08"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-demo-web-v120220109141823037700000006",
            "name_prefix": "test-demo-web-v1",
            "owner_id": "945251900491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "demo",
              "Environment": "test",
              "Name": "test-demo-web-v1",
              "Role": "web"
            },
            "tags_all": {
              "Application": "demo",
              "Environment": "test",
              "Name": "test-demo-web-v1",
              "Role": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-000ba1ce5953f5ee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webalb",
            "data.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}